--- a/products/templates/advanced_search.html
+++ b/products/templates/advanced_search.html
@@ -92,7 +92,7 @@
                                 <option value="0">Rating</option>
                             </select>
                             <a class="main-btn icon-btn" id = "submit_btn"><i class="fa fa-arrow-down"></i></a>
-                            <a class="main-btn icon-btn" id = "sort-btn"><i class="fas fa-sort"></i></a>
+                            <a class="main-btn icon-btn" id = "sort-btn"><i class="fa fa-sort"></i></a>
                         </div>
                     </div>
 
@@ -105,12 +105,12 @@
                                 <option value="2">30</option>
                             </select>
                         </div>
-                        <ul class="store-pages">
+                        <ul class="store-pages" class="page-slick">
                             <li><span class="text-uppercase">Page:</span></li>
-                            <li class="active">1</li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#"><i class="fa fa-caret-right"></i></a></li>
+                            <li class="active" value="1">1</li>
+                            <li value="2">2</a></li>
+                            <li value="3">3</a></li>
+                            <li><i class="fa fa-caret-right"></i></a></li>
                         </ul>
                     </div>
 
