--- a/products/templates/category_page_product_info.html
+++ b/products/templates/category_page_product_info.html
@@ -31,9 +31,10 @@
                         </button>
                         <button class="main-btn icon-btn"><i class="fa fa-exchange"></i>
                         </button>
-                        <button class="primary-btn add-to-cart"><i class="fa fa-shopping-cart"></i>
+                        <button class="primary-btn add-to-cart" onclick="handle_add_to_cart({{ product.id }})"> <a><i class="fa fa-shopping-cart"></i>
                             Add to
                             Cart
+                        </a>
                         </button>
                     </div>
                 </div>
