--- a/products/templates/homepage_product_info.html
+++ b/products/templates/homepage_product_info.html
@@ -44,10 +44,10 @@
                     </button>
                     <button class="main-btn icon-btn"><i class="fa fa-exchange"></i>
                     </button>
-                    <button class="primary-btn add-to-cart"><i
+                    <button class="primary-btn add-to-cart" onclick="handle_add_to_cart({{ product.id }})"> <a><i
                             class="fa fa-shopping-cart"></i> Add to
                         Cart
-                    </button>
+                    </a> </button>
                 </div>
             </div>
         </div>
