--- a/products/templates/userreg.html
+++ b/products/templates/userreg.html
@@ -12,106 +12,89 @@
 
     <!-- Main css -->
     <link rel="stylesheet" href="{% static 'register/css/style.css' %}">
+    <link rel="icon" type="image/png" href="{% static 'login/images/icons/favicon.ico' %}">
+    <!--===============================================================================================-->
+    {#toastr css#}
+    <link type="text/css" rel="stylesheet" href="{% static 'login/toastr/css/toastr.min.css' %}"
+          media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="{% static 'login/toastr/css/style.css' %}" media="screen,projection"/>
+
+
+    {# toastr jss #}
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
+    <script type="text/javascript" src="{% static 'login/toastr/js/toastr.min.js' %}"></script>
+
 </head>
 <body>
 
-    <div class="main">
-        <div class="container">
-            <div class="signup-content">
-                <div class="signup-img">
-                    <img src="/media/img/cover.jpg" alt="">
-                </div>
-                <div class="signup-form">
-                    <form method="POST" class="register-form" id="register-form">
-                        <h2>student registration form</h2>
-                        <div class="form-row">
-                            <div class="form-group">
-                                <label for="name">Name :</label>
-                                <input type="text" name="name" id="name" required/>
-                            </div>
-                            <div class="form-group">
-                                <label for="father_name">Father Name :</label>
-                                <input type="text" name="father_name" id="father_name" required/>
-                            </div>
+<div class="main">
+    <div class="container">
+        <div class="signup-content">
+            <div class="signup-img">
+                <img src="/media/img/cover.jpg" alt="">
+            </div>
+            {% if messages %}
+                {% include 'toast_messages.html' %}
+            {% endif %}
+
+            <div class="signup-form">
+                <form method="POST" class="register-form" id="register-form" action="{% url 'register_user' %}">
+                    {% csrf_token %}
+                    <h2>User Registration Form</h2>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="first_name">First Name :</label>
+                            <input type="text" name="first_name" id="first_name" required/>
                         </div>
                         <div class="form-group">
-                            <label for="address">Address :</label>
-                            <input type="text" name="address" id="address" required/>
+                            <label for="last_name">Last Name :</label>
+                            <input type="text" name="last_name" id="last_name" required/>
                         </div>
-                        <div class="form-radio">
-                            <label for="gender" class="radio-label">Gender :</label>
-                            <div class="form-radio-item">
-                                <input type="radio" name="gender" id="male" checked>
-                                <label for="male">Male</label>
-                                <span class="check"></span>
-                            </div>
-                            <div class="form-radio-item">
-                                <input type="radio" name="gender" id="female">
-                                <label for="female">Female</label>
-                                <span class="check"></span>
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group">
-                                <label for="state">State :</label>
-                                <div class="form-select">
-                                    <select name="state" id="state">
-                                        <option value=""></option>
-                                        <option value="us">America</option>
-                                        <option value="uk">English</option>
-                                    </select>
-                                    <span class="select-icon"><i class="zmdi zmdi-chevron-down"></i></span>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="city">City :</label>
-                                <div class="form-select">
-                                    <select name="city" id="city">
-                                        <option value=""></option>
-                                        <option value="losangeles">Los Angeles</option>
-                                        <option value="washington">Washington</option>
-                                    </select>
-                                    <span class="select-icon"><i class="zmdi zmdi-chevron-down"></i></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="birth_date">DOB :</label>
-                            <input type="text" name="birth_date" id="birth_date">
-                        </div>
-                        <div class="form-group">
-                            <label for="pincode">Pincode :</label>
-                            <input type="text" name="pincode" id="pincode">
-                        </div>
-                        <div class="form-group">
-                            <label for="course">Course :</label>
-                            <div class="form-select">
-                                <select name="course" id="course">
-                                    <option value=""></option>
-                                    <option value="computer">Computer Operator & Pragramming Assistant</option>
-                                    <option value="desiger">Designer</option>
-                                    <option value="marketing">Marketing</option>
-                                </select>
-                                <span class="select-icon"><i class="zmdi zmdi-chevron-down"></i></span>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email ID :</label>
-                            <input type="email" name="email" id="email" />
-                        </div>
-                        <div class="form-submit">
-                            <input type="submit" value="Reset All" class="submit" name="reset" id="reset" />
-                            <input type="submit" value="Submit Form" class="submit" name="submit" id="submit" />
-                        </div>
-                    </form>
-                </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="address">Address :</label>
+                        <input type="text" name="address" id="address" required/>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email">Email ID :</label>
+                        <input type="email" name="email" id="email"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="profession">Profession :</label>
+                        <input type="text" name="profession" id="profession">
+                    </div>
+                    <div class="form-group">
+                        <label for="mobile_no">Mobile Number :</label>
+                        <input type="text" name="mobile_no" id="mobile_no">
+                    </div>
+                    <div class="form-group">
+                        <label for="bkash_no">bKash Number :</label>
+                        <input type="text" name="bkash_no" id="bkash_no">
+                    </div>
+                    <div class="form-group">
+                        <label for="username">Username :</label>
+                        <input type="text" name="user_name" id="user_name">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password :</label>
+                        <input type="text" name="password" id="password">
+                    </div>
+
+                    <div class="form-submit">
+                        <input type="submit" value="Reset All" class="submit" name="reset" id="reset"/>
+                        <input type="submit" value="Submit Form" class="submit" name="submit" id="submit"/>
+                    </div>
+                </form>
             </div>
         </div>
-
     </div>
 
-    <!-- JS -->
-    <script src="{% static 'register/vendor/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'register/js/main.js' %}"></script>
+</div>
+
+<!-- JS -->
+<script src="{% static 'register/vendor/jquery/jquery.min.js' %}"></script>
+<script src="{% static 'register/js/main.js' %}"></script>
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 </html>
