--- a/products/templates/addproduct.html
+++ b/products/templates/addproduct.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,45 +40,11 @@
             {% endif %}
 
             <div class="signup-form">
-                <form method="POST" class="register-form" id="register-form" action="{% url 'add_product' %}">
+                <form method="POST" class="register-form" id="register-form" enctype="multipart/form-data" action="{% url 'add_product' %}">
+
                     {% csrf_token %}
                     <h2>Add Product Form</h2>
-                    <div class="form-group">
-                        <label for="product_name">Product Name :</label>
-                        <input type="text" name="product_name" id="product_name" required/>
-                    </div>
-                    <div class="form-group">
-                        <label for="description">Description :</label>
-                        <input type="text" name="description" id="description" required/>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="quantity">Quantity :</label>
-                        <input type="text" name="quantity" id="quantity"/>
-                    </div>
-                    <div class="form-group">
-                        <label for="price">Price :</label>
-                        <input type="text" name="price" id="price">
-                    </div>
-                    <div class="form-group">
-                        <label for="image">Image :</label>
-                        <input type="file" name="image" accept="image/*" id="image">
-
-                    </div>
-                    <div class="form-group">
-                        <label class="required" for="category">Category:</label>
-
-                        <select class="input search-categories" name="category">
-
-                            <option selected disabled>Select Category</option>
-
-                            {% for i in category_list %}
-                                <option value="{{ forloop.counter }}"> {{ i.category }} </option>
-                            {% endfor %}
-
-                        </select>
-
-                    </div>
+                    {{ form|crispy }}
                     <div class="form-submit">
                         <input type="submit" value="Reset All" class="submit" name="reset" id="reset"/>
                         <input type="submit" value="Submit Form" class="submit" name="submit" id="submit"/>
